--- a/index.html
+++ b/index.html
@@ -1,60 +1,73 @@
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>ohmyfood</title>
 </head>
+
 <body>
     <header>
-        <img src="assets/icons/ohmyfood.png" alt="Logo oh my food">
-            <p>Paris, Belleville</p>
+        <img id="LogoHeader" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <div class="location">
+        <i class="fa-solid fa-location-dot"></i><p>Paris, Belleville</p>
+        </div>
     </header>
     <main>
-<section class="reservation">
-    <h1>Réservez le menu qui vous convient</h1>
-    <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-    <a href="#restaurants" class="cta">Explorer nos restaurants</a>
-</section>
-<section class="operation">
-    <ul>
-        <li>Choisissez un restaurant</li>
-        <li>Composez votre menu</li>
-        <li>Dégustez au restaurant</li>
-    </ul>
-</section>
-<section class="restaurants">
-    <a href="#">
-        <article class="card">
-            <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant la palette du goût">
-            <p class="card-txt"><strong>La palette du goût</strong><br>Ménilmontant</p>
-        </article>
-        <article class="card">
-            <img src="assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée">
-            <p class="card-txt"><strong>La note enchantée</strong><br>Charonne</p>
-        </article>
-        <article class="card">
-            <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la francaise">
-            <p class="card-txt"><strong>A la francaise</strong><br>Cité Rouge</p>
-        </article>
-        <article class="card">
-            <img src="assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo du restaurant le délice des sens">
-            <p class="card-txt"><strong>Le délice des sens</strong><br>Folie-Méricourt</p>
-        </article>
-    </a>
-</section>
+        <section class="reservation">
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <a href="#restaurants" class="cta">Explorer nos restaurants</a>
+        </section>
+        <section class="operation">
+            <h2>Fonctionnement</h2>
+            <ul>
+                <i class="fa-solid fa-mobile-screen-button"></i><li>Choisissez un restaurant</li>
+                <i class="fa-solid fa-bars"></i><li>Composez votre menu</li>
+                <i class="fa-solid fa-store"></i><li>Dégustez au restaurant</li>
+            </ul>
+        </section>
+        <section class="restaurants">
+            <h2>Restaurants</h2>
+            <a href="#">
+                <article class="card">
+                    <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                        alt="Photo du restaurant la palette du goût">
+                    <p class="card-txt"><strong>La palette du goût</strong><br>Ménilmontant</p>
+                </article>
+                <article class="card">
+                    <img src="assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée">
+                    <p class="card-txt"><strong>La note enchantée</strong><br>Charonne</p>
+                </article>
+                <article class="card">
+                    <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la francaise">
+                    <p class="card-txt"><strong>A la francaise</strong><br>Cité Rouge</p>
+                </article>
+                <article class="card">
+                    <img src="assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt="photo du restaurant le délice des sens">
+                    <p class="card-txt"><strong>Le délice des sens</strong><br>Folie-Méricourt</p>
+                </article>
+            </a>
+        </section>
     </main>
     <footer>
-        <img class="logo-footer" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <img id="LogoFooter" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
         <ul>
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contacts</li>
+            <i class="fa-solid fa-utensils"></i><li><a href="#">Proposer un restaurant</a></li>
+            <i class="fa-solid fa-handshake-angle"></i><li><a href="#">Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Contacts</a></li>
         </ul>
     </footer>
 </body>
+
 </html>
