--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     </header>
     <main>
         <section class="reservation">
-            <h1>Réservez le menu qui vous convient</h1>
+            <h1 class="title__reservation"> Reservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <a href="#restaurants" class="cta">Explorer nos restaurants</a>
         </section>
         <section class="operation">
-            <h2>Fonctionnement</h2>
+            <h2 class="title__operation"> Fonctionnement</h2>
             <ul>
-                <i class="fa-solid fa-mobile-screen-button"></i><li>Choisissez un restaurant</li>
-                <i class="fa-solid fa-bars"></i><li>Composez votre menu</li>
-                <i class="fa-solid fa-store"></i><li>Dégustez au restaurant</li>
+              <div class="button__operation"><i class="fa-solid fa-mobile-screen-button"></i><li class="text__operation">Choisissez un restaurant</li></div>
+              <div class="button__operation"><i class="fa-solid fa-bars"></i><li class="text__operation">Composez votre menu</li></div>
+              <div class="button__operation"><i class="fa-solid fa-store"></i><li class="text__operation">Dégustez au restaurant</li></div>
             </ul>
         </section>
         <section class="restaurants">
@@ -41,20 +41,20 @@
                 <article class="card">
                     <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="Photo du restaurant la palette du goût">
-                    <p class="card-txt"><strong>La palette du goût</strong><br>Ménilmontant</p>
+                    <p class="card-txt"><strong>La palette du goût</strong><br><span class="card-txt__subtitle">Ménilmontant</span></p>
                 </article>
                 <article class="card">
                     <img src="assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée">
-                    <p class="card-txt"><strong>La note enchantée</strong><br>Charonne</p>
+                    <p class="card-txt"><strong>La note enchantée</strong><br><span class="card-txt__subtitle">Charonne</p>
                 </article>
                 <article class="card">
                     <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la francaise">
-                    <p class="card-txt"><strong>A la francaise</strong><br>Cité Rouge</p>
+                    <p class="card-txt"><strong>A la francaise</strong><br><span class="card-txt__subtitle">Cité Rouge</p>
                 </article>
                 <article class="card">
                     <img src="assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="photo du restaurant le délice des sens">
-                    <p class="card-txt"><strong>Le délice des sens</strong><br>Folie-Méricourt</p>
+                    <p class="card-txt"><strong>Le délice des sens</strong><br><span class="card-txt__subtitle">Folie-Méricourt</p>
                 </article>
             </a>
         </section>
@@ -62,10 +62,10 @@
     <footer>
         <img id="LogoFooter" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
         <ul>
-            <i class="fa-solid fa-utensils"></i><li><a href="#">Proposer un restaurant</a></li>
-            <i class="fa-solid fa-handshake-angle"></i><li><a href="#">Devenir partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contacts</a></li>
+            <div class="footer-txt"><i class="fa-solid fa-utensils"></i><li><a href="#">Proposer un restaurant</a></li></div>
+            <div class="footer-txt"><i class="fa-solid fa-handshake-angle"></i><li><a href="#">Devenir partenaire</a></li></div>
+            <div class="footer-txt"><li><a href="#">Mentions légales</a></li></div>
+            <div class="footer-txt"><li><a href="#">Contacts</a></li></div>
         </ul>
     </footer>
 </body>
