--- a/index.html
+++ b/index.html
@@ -17,55 +17,68 @@
 <body>
     <header>
         <img id="LogoHeader" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
-        <div class="location">
-        <i class="fa-solid fa-location-dot"></i><p>Paris, Belleville</p>
-        </div>
     </header>
+        <div class="location">
+        <i class="fa-solid fa-location-dot"></i><p class="location__title">Paris, Belleville</p>
+        </div>
     <main>
         <section class="reservation">
-            <h1 class="title__reservation"> Reservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+        <h1 class="reservation__title"> Réservez le menu qui vous convient</h1>
+           <span class="reservation__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span></p>
             <a href="#restaurants" class="cta">Explorer nos restaurants</a>
         </section>
         <section class="operation">
-            <h2 class="title__operation"> Fonctionnement</h2>
+            <div class="operation__line">
+            <h2 class="operation__title"> Fonctionnement</h2>
             <ul>
-              <div class="button__operation"><i class="fa-solid fa-mobile-screen-button"></i><li class="text__operation">Choisissez un restaurant</li></div>
-              <div class="button__operation"><i class="fa-solid fa-bars"></i><li class="text__operation">Composez votre menu</li></div>
-              <div class="button__operation"><i class="fa-solid fa-store"></i><li class="text__operation">Dégustez au restaurant</li></div>
+              <div class="operation__button"><i class="fa-solid fa-mobile-screen-button"></i><li class="operation__text">Choisissez un restaurant</li></div>
+              <div class="operation__button"><i class="fa-solid fa-bars"></i><li class="operation__text">Composez votre menu</li></div>
+              <div class="operation__button"><i class="fa-solid fa-store"></i><li class="operation__text">Dégustez au restaurant</li></div>
             </ul>
+        </div>
         </section>
         <section class="restaurants">
-            <h2>Restaurants</h2>
-            <a href="#">
+            <h2 id="restaurants">Restaurants</h2>
+            <div class="first_line">
+            <a href="restaurants/palette.html">
                 <article class="card">
                     <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="Photo du restaurant la palette du goût">
-                    <p class="card-txt"><strong>La palette du goût</strong><br><span class="card-txt__subtitle">Ménilmontant</span></p>
+                    <p class="card-txt"><strong>La palette du goût</strong><i class="fa-regular fa-heart"></i><br><span class="card-txt__subtitle">Ménilmontant</span></p>
+                    
                 </article>
+            </a>
+            <a href="restaurants/la-note.html">
                 <article class="card">
                     <img src="assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée">
-                    <p class="card-txt"><strong>La note enchantée</strong><br><span class="card-txt__subtitle">Charonne</p>
+                    <p class="card-txt"><strong>La note enchantée</strong><i class="fa-regular fa-heart"></i><br><span class="card-txt__subtitle">Charonne</p>
                 </article>
+            </a>
+            </div>
+            <div class="second_line">
+            <a href="restaurants/francaise.html">
                 <article class="card">
                     <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la francaise">
-                    <p class="card-txt"><strong>A la francaise</strong><br><span class="card-txt__subtitle">Cité Rouge</p>
+                    <p class="card-txt"><strong>A la francaise</strong><i class="fa-regular fa-heart"></i><br><span class="card-txt__subtitle">Cité Rouge</p>
                 </article>
+            </a>
+            <a href="restaurants/délice.html">
                 <article class="card">
                     <img src="assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="photo du restaurant le délice des sens">
-                    <p class="card-txt"><strong>Le délice des sens</strong><br><span class="card-txt__subtitle">Folie-Méricourt</p>
+                    <p class="card-txt"><strong>Le délice des sens</strong><i class="fa-regular fa-heart"></i><br><span class="card-txt__subtitle">Folie-Méricourt</p>
                 </article>
             </a>
+        </div>
         </section>
     </main>
     <footer>
         <img id="LogoFooter" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
         <ul>
-            <div class="footer-txt"><i class="fa-solid fa-utensils"></i><li><a href="#">Proposer un restaurant</a></li></div>
-            <div class="footer-txt"><i class="fa-solid fa-handshake-angle"></i><li><a href="#">Devenir partenaire</a></li></div>
-            <div class="footer-txt"><li><a href="#">Mentions légales</a></li></div>
-            <div class="footer-txt"><li><a href="#">Contacts</a></li></div>
+            <li class="footer-text"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+            <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+            <li class="footer-text">Mentions légales</li>
+            <li class="footer-text">Contacts</li>
         </ul>
     </footer>
 </body>
