--- a/restaurants/délice.html
+++ b/restaurants/délice.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/menu.scss">
+    <link rel="stylesheet" href="/styles/menu.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -14,14 +14,14 @@
 
 <body>
     <header>
-        <img src="assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <img src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
         <p>Paris, Belleville</p>
     </header>
     <main>
 
     </main>
     <footer>
-        <img class="logo-footer" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <img class="logo-footer" src="../assets/icons/ohmyfood.png" alt="Logo oh my food">
         <ul>
             <li>Proposer un restaurant</li>
             <li>Devenir partenaire</li>
