--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>ohmyfood</title>
@@ -18,57 +19,81 @@
     <header>
         <img id="LogoHeader" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
     </header>
-        <div class="location">
-        <i class="fa-solid fa-location-dot"></i><p class="location__title">Paris, Belleville</p>
-        </div>
+    <div class="location">
+        <i class="fa-solid fa-location-dot"></i>
+        <p class="location__title">Paris, Belleville</p>
+    </div>
     <main>
         <section class="reservation">
-        <h1 class="reservation__title"> Réservez le menu qui vous convient</h1>
-           <span class="reservation__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span></p>
+            <h1 class="reservation__title"> Réservez le menu qui vous convient</h1>
+            <span class="reservation__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos
+                soins.</span></p>
             <a href="#restaurants" class="cta">Explorer nos restaurants</a>
         </section>
         <section class="operation">
             <div class="operation__line">
-            <h2 class="operation__title"> Fonctionnement</h2>
-            <ul>
-              <div class="operation__button"><i class="fa-solid fa-mobile-screen-button"></i><li class="operation__text">Choisissez un restaurant</li></div>
-              <div class="operation__button"><i class="fa-solid fa-bars"></i><li class="operation__text">Composez votre menu</li></div>
-              <div class="operation__button"><i class="fa-solid fa-store"></i><li class="operation__text">Dégustez au restaurant</li></div>
-            </ul>
-        </div>
+                <h2 class="operation__title">Fonctionnement</h2>
+                <ul>
+                    <div class="operation__button"><i class="fa-solid fa-mobile-screen-button"></i>
+                        <li class="operation__text">Choisissez un restaurant</li>
+                        <div class="number">1</div>
+                    </div>
+                    <div class="operation__button"><i class="fa-solid fa-bars"></i>
+                        <li class="operation__text">Composez votre menu</li>
+                        <div class="number">2</div>
+                    </div>
+                    <div class="operation__button"><i class="fa-solid fa-store"></i>
+                        <li class="operation__text">Dégustez au restaurant</li>
+                        <div class="number">3</div>
+                    
+                    </div>
+                </ul>
+            </div>
         </section>
         <section class="restaurants">
+            <div class="container">
             <h2 id="restaurants">Restaurants</h2>
             <div class="first_line">
-            <a href="restaurants/palette.html">
-                <article class="card">
-                    <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                        alt="Photo du restaurant la palette du goût">
-                    <p class="card-txt"><strong>La palette du goût</strong><i class="fa-regular fa-heart"></i><br><span class="card-txt__subtitle">Ménilmontant</span></p>
-                    
-                </article>
-            </a>
-            <a href="restaurants/la-note.html">
-                <article class="card">
-                    <img src="assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée">
-                    <p class="card-txt"><strong>La note enchantée</strong><i class="fa-regular fa-heart"></i><br><span class="card-txt__subtitle">Charonne</p>
-                </article>
-            </a>
+                <a href="restaurants/palette.html">
+                    <div class="card">
+                        <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="Photo du restaurant la palette du goût">
+                        <p class="card-txt"><strong>La palette du goût</strong><br><span class="card-txt__subtitle">Ménilmontant</span>
+                            <i class="fa-regular fa-heart"></i>
+                        </p>
+                        <div class="news">Nouveau</div>
+                    </div>
+                </a>
+                <a href="restaurants/la-note.html">
+                    <div class="card">
+                        <img src="assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée">
+                        <p class="card-txt"><strong>La note enchantée</strong>
+                            <i class="fa-regular fa-heart"></i><br>
+                            <span class="card-txt__subtitle">Charonne</span>
+                        </p>
+                        <div class="news news_second">Nouveau</div>
+                    </div>
+                </a>
             </div>
             <div class="second_line">
-            <a href="restaurants/francaise.html">
-                <article class="card">
-                    <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la francaise">
-                    <p class="card-txt"><strong>A la francaise</strong><i class="fa-regular fa-heart"></i><br><span class="card-txt__subtitle">Cité Rouge</p>
-                </article>
-            </a>
-            <a href="restaurants/délice.html">
-                <article class="card">
-                    <img src="assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                        alt="photo du restaurant le délice des sens">
-                    <p class="card-txt"><strong>Le délice des sens</strong><i class="fa-regular fa-heart"></i><br><span class="card-txt__subtitle">Folie-Méricourt</p>
-                </article>
-            </a>
+                <a href="restaurants/francaise.html">
+                    <div class="card">
+                        <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la francaise">
+                        <p class="card-txt"><strong>A la francaise</strong>
+                            <i class="fa-regular fa-heart"></i><br>
+                            <span class="card-txt__subtitle">Cité Rouge</span>
+                            </p>
+                    </div>
+                </a>
+                <a href="restaurants/délice.html">
+                    <div class="card">
+                        <img src="assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="photo du restaurant le délice des sens">
+                        <p class="card-txt"><strong>Le délice des sens</strong><br><span class="card-txt__subtitle">Folie-Méricourt</p>
+                            <i class="fa-regular fa-heart"></i>
+                    </div>
+                </a>
+            </div>
         </div>
         </section>
     </main>
