--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -78,7 +78,7 @@
         </section>
     </main>
     <footer>
-        <img id="LogoFooter" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
         <ul>
             <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
             <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
