--- a/index.html
+++ b/index.html
@@ -150,14 +150,16 @@
         </section>
     </main>
     <footer>
-        <img id="LogoFooter" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
-        <ul>
-            <li class="footer-text"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-            <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            <li class="footer-text second">Mentions légales</li>
-            <li class="footer-text">Contacts</li>
-        </ul>
+        <div class="footer-container">
+            <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+            <ul>
+                <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
+                </li>
+                <li class="footer-text second"><a href="#">Mentions légales</a></li>
+                <li class="footer-text"><a href="#">Contacts</a></li>
+            </ul>
+        </div>
     </footer>
-</body>
 
 </html>
