--- a/restaurants/délice.html
+++ b/restaurants/délice.html
@@ -195,16 +195,17 @@
         </section>
     </main>
     <footer>
-
+    <div class="footer-container">
         <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
         <ul>
             <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-            <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
+            <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
+            </li>
             <li class="footer-text second"><a href="#">Mentions légales</a></li>
             <li class="footer-text"><a href="#">Contacts</a></li>
         </ul>
-
-    </footer>
+    </div>
+</footer>
 </body>
 
 </html>
