--- a/restaurants/la-note.html
+++ b/restaurants/la-note.html
@@ -209,21 +209,21 @@
                         <p class="cta-text">Commander</p>
                     </a>
                 </div>
-            </section>
+
         </section>
     </main>
     <footer>
-        <div class="first-list">
-            <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
-            <ul>
-                <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
-                </li>
-                <li class="footer-text second"><a href="#">Mentions légales</a></li>
-                <li class="footer-text"><a href="#">Contacts</a></li>
-            </ul>
-        </div>
-    </footer>
+    <div class="footer-container">
+        <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <ul>
+            <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+            <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
+            </li>
+            <li class="footer-text second"><a href="#">Mentions légales</a></li>
+            <li class="footer-text"><a href="#">Contacts</a></li>
+        </ul>
+    </div>
+</footer>
 
 </body>
 
