--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -36,16 +37,13 @@
             </div>
         </div>
     </div>
-    <div id="content">
-        <h1>Bienvenue chez OhmyFood</h1>
-    </div>
 
     <header>
         <nav>
-            <a href="/index.html">
+            <a href="index.html">
             </a>
         </nav>
-        <img id="LogoHeader" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <img id="LogoHeader" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
     </header>
 
     <div class="location">
@@ -58,7 +56,7 @@
         <section class="reservation">
             <h1 class="reservation__title"> Réservez le menu qui vous convient</h1>
             <span class="reservation__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos
-                soins.</span></p>
+                soins.</span>
             <a href="#restaurants" class="cta">Explorer nos restaurants</a>
         </section>
 
@@ -66,24 +64,25 @@
             <div class="container">
                 <h2 class="operation__title">Fonctionnement</h2>
                 <ul>
-                    <div class="operation__button"><i class="fa-solid fa-mobile-screen-button"></i>
-                        <li class="operation__text">Choisissez un restaurant</li>
+                    <li class="operation__button">
+                        <i class="fa-solid fa-mobile-screen-button"></i>
+                        <div class="operation__text">Choisissez un restaurant</div>
                         <div class="number">1</div>
-                    </div>
-                    <div class="operation__button"><i class="fa-solid fa-bars"></i>
-                        <li class="operation__text">Composez votre menu</li>
+                    </li>
+                    <li class="operation__button">
+                        <i class="fa-solid fa-bars"></i>
+                        <div class="operation__text">Composez votre menu</div>
                         <div class="number">2</div>
-                    </div>
-                    <div class="operation__button"><i class="fa-solid fa-store"></i>
-                        <li class="operation__text">Dégustez au restaurant</li>
+                    </li>
+                    <li class="operation__button">
+                        <i class="fa-solid fa-store"></i>
+                        <div class="operation__text">Dégustez au restaurant</div>
                         <div class="number">3</div>
-
-                    </div>
+                    </li>
                 </ul>
-
             </div>
         </section>
-
+        
         <section class="restaurants" id="restaurants">
             <h2 id="restaurants-title">Restaurants</h2>
             <div class="container">
@@ -93,65 +92,64 @@
 
                         <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="Photo du restaurant la palette du goût">
-                        <p class="card-txt">
-                            <strong>La palette du goût</strong><br class="flop">
+                        <h3 class="card-txt">
+                            La palette du goût<br class="flop">
                             <span class="card-txt__subtitle">Ménilmontant</span>
-                            <input type="checkbox" id="heart1" class="heart-checkbox">
-                            <label for="heart1" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
-                        </p>
+                        </h3>
                         <div class="news">
                             <div class="nouveau">Nouveau</div>
                         </div>
                     </a>
+                    <input type="checkbox" id="heart1" class="heart-checkbox">
+                    <label for="heart1" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
 
                 <article class="card">
                     <a href="restaurants/la-note.html">
 
                         <img src="assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée">
-                        <p class="card-txt">
-                            <strong>La note enchantée</strong><br class="flop">
+                        <h3 class="card-txt">
+                            La note enchantée<br class="flop">
                             <span class="card-txt__subtitle">Charonne</span>
-                            <input type="checkbox" id="heart2" class="heart-checkbox">
-                            <label for="heart2" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
-                        </p>
+                        </h3>
                         <div class="news">
                             <div class="nouveau">Nouveau</div>
                         </div>
                     </a>
+                    <input type="checkbox" id="heart2" class="heart-checkbox">
+                            <label for="heart2" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
                 <article class="card">
                     <a href="restaurants/francaise.html">
-
                         <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="Photo du restaurant à la francaise">
-                        <p class="card-txt">
-                            <strong>A la francaise</strong><br class="flop">
+                        <h3 class="card-txt">
+                            A la francaise<br class="flop">
                             <span class="card-txt__subtitle">Cité Rouge</span>
-                            <input type="checkbox" id="heart3" class="heart-checkbox">
-                            <label for="heart3" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
-                        </p>
+                        </h3>
                     </a>
+                    <input type="checkbox" id="heart3" class="heart-checkbox">
+                            <label for="heart3" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
                 <article class="card">
-                    <a href="restaurants/délice.html">
+                    <a href="restaurants/delice.html">
 
                         <img src="assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="photo du restaurant le délice des sens">
-                        <p class="card-txt">
-                            <strong>Le délice des sens</strong><br class="flop">
+                        <h3 class="card-txt">
+                            Le délice des sens<br class="flop">
                             <span class="card-txt__subtitle">Folie-Méricourt</span>
-                            <input type="checkbox" id="heart4" class="heart-checkbox">
-                            <label for="heart4" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
-                        </p>
+                        </h3>
                     </a>
+                    <input type="checkbox" id="heart4" class="heart-checkbox">
+                            <label for="heart4" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
             </div>
         </section>
     </main>
     <footer>
         <div class="footer-container">
-            <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+            <img id="LogoFooter" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
             <ul>
                 <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                 <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
