--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -52,16 +52,17 @@
                 <article class="card">
                     <input type="checkbox" id="plat" class="checkbox">
                     <label for="plat" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
+
+                            <p class="card-txt">
                                 Fricassée d'escargots<br>
                                 <span class="card-txt__subtitle">Au piment d'Espelette</span>
-                            </h3>
+                            </p>
                             <span class="price">
                                 <span class="card-price">25€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
+                        
+                        
                     </label>
                 </article>
 
