add class on operation section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section class="operation">
 
                 <h2 class="operation__title ">Fonctionnement</h2>
-                <ul>
+                <ul class="operation__line">
                     <li class="operation__button">
                         <i class="fa-solid fa-mobile-screen-button"></i>
                         <div class="operation__text">Choisissez un restaurant</div>
